--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body style="background-color: green;">
 	<div class="container">
-		<img src="dtc.PNG" class="mx-auto d-block mb-3" style="width: 25%;">
+		<img src="dtc.png" class="mx-auto d-block mb-3" style="width: 25%;">
 		<a type="submit" class="btn btn-outline-light btn-block mx-auto mb-3" style="width: 50%;" href="#">New Tournament</a>
 		<a type="submit" class="btn btn-outline-light btn-block mx-auto mb-3" style="width: 50%;" href="findtournament.html">Find Tournament</a>
 	</div>
